--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "type": "git",
     "url": "git+https://github.com/abgaryanharutyun/react-auth-context.git"
   },
-  "author": "",
+  "author": "Harutyun Abgaryan <harutyunabgaryan@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/abgaryanharutyun/react-auth-context/issues"
