--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,9 @@
   "homepage": "https://github.com/abgaryanharutyun/react-auth-verification-context#readme",
   "devDependencies": {
     "@types/react": "^18.0.26",
+    "prettier": "^2.8.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
