--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-auth-verification-context",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "react-auth-verification-context is a library that provides a way to manage authentication state in a React application. It is implemented using the React context API, which allows you to pass data through the component tree without having to pass props down manually at every level.",
   "keywords": [
     "react",
@@ -19,11 +19,17 @@
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json"
+   "test": "jest --config jestconfig.json",
+   "build": "tsc",
+   "format": "prettier --write \"src/**/*.ts\"",
+   "lint": "tslint -p tsconfig.json",
+   "prepare": "npm run build",
+   "prepublishOnly": "npm test && npm run lint",
+   "preversion": "npm run lint",
+   "version": "npm run format && git add -A src",
+   "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -36,13 +42,21 @@
   },
   "homepage": "https://github.com/abgaryanharutyun/react-auth-verification-context#readme",
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.1",
+    "ts-jest": "^29.0.3",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "react": "^18.2.0"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
