--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,16 +56,15 @@ jobs:
       - run: npm run build
 workflows:
   version: 2
-  upload-to-codecov:
-    jobs:
-      - checkout
-      - codecov/upload
   build:
     jobs:
       - install-dependencies
       - tests:
           requires:
             - install-dependencies
+      - codecov/upload:
+          requires:
+            - tests
       - build:
           requires:
             - tests
